exports[`Testing BookShelf Component check render when state changes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookShelf
    books={
        Array [
            Object {
              "authors": Array [
                "Authors One",
              ],
              "id": 1,
              "imageLinks": Object {
                "thumbnail": "url/book/one",
              },
              "shelf": "read",
              "title": "Book One",
            },
          ]
    }
    onUpdateBook={[Function]}
    title="read" />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="bookshelf-title">
          read
</h2>,
        <div
          className="bookshelf-books">
          <ol
                    className="books-grid">
                    <Book
                              book={
                                        Object {
                                                  "authors": Array [
                                                    "Authors One",
                                                  ],
                                                  "id": 1,
                                                  "imageLinks": Object {
                                                    "thumbnail": "url/book/one",
                                                  },
                                                  "shelf": "read",
                                                  "title": "Book One",
                                                }
                              }
                              onUpdateBook={[Function]} />
          </ol>
</div>,
      ],
      "className": "bookshelf",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "read",
          "className": "bookshelf-title",
        },
        "ref": null,
        "rendered": "read",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ol
            className="books-grid">
            <Book
                        book={
                                    Object {
                                                "authors": Array [
                                                  "Authors One",
                                                ],
                                                "id": 1,
                                                "imageLinks": Object {
                                                  "thumbnail": "url/book/one",
                                                },
                                                "shelf": "read",
                                                "title": "Book One",
                                              }
                        }
                        onUpdateBook={[Function]} />
</ol>,
          "className": "bookshelf-books",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Book
                book={
                                Object {
                                                "authors": Array [
                                                  "Authors One",
                                                ],
                                                "id": 1,
                                                "imageLinks": Object {
                                                  "thumbnail": "url/book/one",
                                                },
                                                "shelf": "read",
                                                "title": "Book One",
                                              }
                }
                onUpdateBook={[Function]} />,
            ],
            "className": "books-grid",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "book": Object {
                  "authors": Array [
                    "Authors One",
                  ],
                  "id": 1,
                  "imageLinks": Object {
                    "thumbnail": "url/book/one",
                  },
                  "shelf": "read",
                  "title": "Book One",
                },
                "onUpdateBook": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "ol",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="bookshelf-title">
            read
</h2>,
          <div
            className="bookshelf-books">
            <ol
                        className="books-grid">
                        <Book
                                    book={
                                                Object {
                                                            "authors": Array [
                                                              "Authors One",
                                                            ],
                                                            "id": 1,
                                                            "imageLinks": Object {
                                                              "thumbnail": "url/book/one",
                                                            },
                                                            "shelf": "read",
                                                            "title": "Book One",
                                                          }
                                    }
                                    onUpdateBook={[Function]} />
            </ol>
</div>,
        ],
        "className": "bookshelf",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "read",
            "className": "bookshelf-title",
          },
          "ref": null,
          "rendered": "read",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ol
              className="books-grid">
              <Book
                            book={
                                          Object {
                                                        "authors": Array [
                                                          "Authors One",
                                                        ],
                                                        "id": 1,
                                                        "imageLinks": Object {
                                                          "thumbnail": "url/book/one",
                                                        },
                                                        "shelf": "read",
                                                        "title": "Book One",
                                                      }
                            }
                            onUpdateBook={[Function]} />
</ol>,
            "className": "bookshelf-books",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Book
                  book={
                                    Object {
                                                      "authors": Array [
                                                        "Authors One",
                                                      ],
                                                      "id": 1,
                                                      "imageLinks": Object {
                                                        "thumbnail": "url/book/one",
                                                      },
                                                      "shelf": "read",
                                                      "title": "Book One",
                                                    }
                  }
                  onUpdateBook={[Function]} />,
              ],
              "className": "books-grid",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "book": Object {
                    "authors": Array [
                      "Authors One",
                    ],
                    "id": 1,
                    "imageLinks": Object {
                      "thumbnail": "url/book/one",
                    },
                    "shelf": "read",
                    "title": "Book One",
                  },
                  "onUpdateBook": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "ol",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Testing BookShelf Component render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookShelf
    books={Array []}
    onUpdateBook={[Function]}
    title="" />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="bookshelf-title" />,
        <div
          className="bookshelf-books">
          <ol
                    className="books-grid">
                    
          </ol>
</div>,
      ],
      "className": "bookshelf",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "bookshelf-title",
        },
        "ref": null,
        "rendered": "",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ol
            className="books-grid">
            
</ol>,
          "className": "bookshelf-books",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
            "className": "books-grid",
          },
          "ref": null,
          "rendered": Array [],
          "type": "ol",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="bookshelf-title" />,
          <div
            className="bookshelf-books">
            <ol
                        className="books-grid">
                        
            </ol>
</div>,
        ],
        "className": "bookshelf",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "bookshelf-title",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ol
              className="books-grid">
              
</ol>,
            "className": "bookshelf-books",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
              "className": "books-grid",
            },
            "ref": null,
            "rendered": Array [],
            "type": "ol",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Testing BookShelf Component verify render when state changes 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookShelf
    books={
        Array [
            Object {
              "authors": Array [
                "Authors One",
              ],
              "id": 1,
              "imageLinks": Object {
                "thumbnail": "url/book/one",
              },
              "shelf": "read",
              "title": "Book One",
            },
          ]
    }
    onUpdateBook={[Function]}
    title="read" />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="bookshelf-title">
          read
</h2>,
        <div
          className="bookshelf-books">
          <ol
                    className="books-grid">
                    <Book
                              book={
                                        Object {
                                                  "authors": Array [
                                                    "Authors One",
                                                  ],
                                                  "id": 1,
                                                  "imageLinks": Object {
                                                    "thumbnail": "url/book/one",
                                                  },
                                                  "shelf": "read",
                                                  "title": "Book One",
                                                }
                              }
                              onUpdateBook={[Function]} />
          </ol>
</div>,
      ],
      "className": "bookshelf",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "read",
          "className": "bookshelf-title",
        },
        "ref": null,
        "rendered": "read",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ol
            className="books-grid">
            <Book
                        book={
                                    Object {
                                                "authors": Array [
                                                  "Authors One",
                                                ],
                                                "id": 1,
                                                "imageLinks": Object {
                                                  "thumbnail": "url/book/one",
                                                },
                                                "shelf": "read",
                                                "title": "Book One",
                                              }
                        }
                        onUpdateBook={[Function]} />
</ol>,
          "className": "bookshelf-books",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Book
                book={
                                Object {
                                                "authors": Array [
                                                  "Authors One",
                                                ],
                                                "id": 1,
                                                "imageLinks": Object {
                                                  "thumbnail": "url/book/one",
                                                },
                                                "shelf": "read",
                                                "title": "Book One",
                                              }
                }
                onUpdateBook={[Function]} />,
            ],
            "className": "books-grid",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "book": Object {
                  "authors": Array [
                    "Authors One",
                  ],
                  "id": 1,
                  "imageLinks": Object {
                    "thumbnail": "url/book/one",
                  },
                  "shelf": "read",
                  "title": "Book One",
                },
                "onUpdateBook": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "ol",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="bookshelf-title">
            read
</h2>,
          <div
            className="bookshelf-books">
            <ol
                        className="books-grid">
                        <Book
                                    book={
                                                Object {
                                                            "authors": Array [
                                                              "Authors One",
                                                            ],
                                                            "id": 1,
                                                            "imageLinks": Object {
                                                              "thumbnail": "url/book/one",
                                                            },
                                                            "shelf": "read",
                                                            "title": "Book One",
                                                          }
                                    }
                                    onUpdateBook={[Function]} />
            </ol>
</div>,
        ],
        "className": "bookshelf",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "read",
            "className": "bookshelf-title",
          },
          "ref": null,
          "rendered": "read",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ol
              className="books-grid">
              <Book
                            book={
                                          Object {
                                                        "authors": Array [
                                                          "Authors One",
                                                        ],
                                                        "id": 1,
                                                        "imageLinks": Object {
                                                          "thumbnail": "url/book/one",
                                                        },
                                                        "shelf": "read",
                                                        "title": "Book One",
                                                      }
                            }
                            onUpdateBook={[Function]} />
</ol>,
            "className": "bookshelf-books",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Book
                  book={
                                    Object {
                                                      "authors": Array [
                                                        "Authors One",
                                                      ],
                                                      "id": 1,
                                                      "imageLinks": Object {
                                                        "thumbnail": "url/book/one",
                                                      },
                                                      "shelf": "read",
                                                      "title": "Book One",
                                                    }
                  }
                  onUpdateBook={[Function]} />,
              ],
              "className": "books-grid",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "book": Object {
                    "authors": Array [
                      "Authors One",
                    ],
                    "id": 1,
                    "imageLinks": Object {
                      "thumbnail": "url/book/one",
                    },
                    "shelf": "read",
                    "title": "Book One",
                  },
                  "onUpdateBook": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "ol",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
